# bioelectric-signals-analysis

./: README.md  pyproject.toml  setup.cfg  test_package.ipynb
data/: ekg.xml
data/eeg_data/: eeg_alfa.xml  eeg_artifact.raw  eeg_artifact.xml  eeg_evoked.tag  eeg_evoked.xml
data/emg_data/: emg.tag  emg.xml
profiler/: ecg_profile.py  eeg_profile.py  emg_profile.py
src/bioesa/: main.py
src/bioesa/ecg_analysis/: __init__.py  heart_rate.py  hrv.py  montage.py
src/bioesa/eeg_analysis/: __init__.py  cut_tags.py  evok_pot.py  montage.py
src/bioesa/emg-analysis/: montage.py
src/bioesa/emg_analysis/: __init__.py  montage.py  spectrum.py
src/bioesa/preprocessing/: __init__.py  filter.py  load.py  spectrum.py
tests/: test_ecg.py  test_eeg.py  test_emg.py  test_preprocessing.py
