[metadata]
name = bioesa
version = 1.0
author = Julia Jakubowska
description = Package for bioelectric signal analysis
long_description = Package for bioelectric signal analysis, f.e. EEG, EMG, ECG

[options]
python_requires = >=3.7, <3.11
install_requires =
    pandas
    numpy
    toml
    scipy
    obci_readmanager
    
package_dir =
    = src

[options.packages.find]
where = src
